--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -716,10 +716,193 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.translate.bleu_score import corpus_bleu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchtext.data.metrics import bleu_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bleu_score(list_of_hypotheses, list_of_references, max_n=3, weights=[.33, .33, .33])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hypothesis = ['This', 'is', 'cat', 'This', 'is', 'cat'] \n",
+    "reference = ['This', 'is', 'a', 'cat', 'This', 'is', 'cat']\n",
+    "references = [reference] # list of references for 1 sentence.\n",
+    "list_of_references = [references] # list of references for all sentences in corpus.\n",
+    "list_of_hypotheses = [hypothesis] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5115078115793242"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus_bleu(list_of_references, list_of_hypotheses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1: 84.64817248906141\n",
+      "2: 75.71162623611156\n",
+      "3: 62.56009219956626\n",
+      "4: 51.150778475239655\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import print_scores\n",
+    "\n",
+    "print_scores(list_of_hypotheses, list_of_references)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from train import validate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataset import get_loaders, build_vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize(256),\n",
+    "    transforms.CenterCrop(224),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                         std=[0.229, 0.224, 0.225]),\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 30000/30000 [00:00<00:00, 391726.22it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab = build_vocab('data.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset split: train\n",
+      "Unique images: 6000\n",
+      "Total size: 30000\n",
+      "Dataset split: val\n",
+      "Unique images: 1000\n",
+      "Total size: 5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "_, val_load = get_loaders(8, 'flickr/Images/', 'data.json', transforms, vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validate(val_load, )"
+   ]
   }
  ],
  "metadata": {
