--- a/Evaluate.ipynb
+++ b/Evaluate.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,33 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 30000/30000 [00:00<00:00, 400361.20it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "vocabulary = build_vocab('data.json') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_NAME = 'flickr8k_5_cap_per_img_2_min_word_freq_resnet101'\n",
+    "DATA_NAME = 'flickr8k_5_cap_per_img_2_min_word_freq_resnet101finetuneencoder'\n",
     "\n",
     "# local\n",
     "DATA_JSON_PATH = 'data.json'\n",
     "IMGS_PATH = 'flickr/Images/'\n",
-    "CHECKPOINT_PATH = 'models/BEST_checkpoint_flickr8k_5_cap_per_img_2_min_word_freq_resnet101.pth.tar'\n",
+    "CHECKPOINT_PATH = 'models/BEST_checkpoint_flickr8k_5_cap_per_img_2_min_word_freq_resnet101_finetuneencoder.pth.tar'\n",
     "# kaggle paths\n",
     "# DATA_JSON_PATH = '/kaggle/working/Image-Captioning/data.json'\n",
     "# IMGS_PATH = '../input/flickr8kimagescaptions/flickr8k/images/'\n"
@@ -61,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,8 +62,8 @@
      "output_type": "stream",
      "text": [
       "Loaded Checkpoint!!\n",
-      "Last Epoch: 8\n",
-      "Best Bleu-4: 0.13934344941076532\n"
+      "Last Epoch: 20\n",
+      "Best Bleu-4: 0.1449556204126587\n"
      ]
     }
    ],
@@ -97,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30000/30000 [00:00<00:00, 290537.37it/s]\n"
+      "100%|██████████| 30000/30000 [00:00<00:00, 373549.77it/s]\n"
      ]
     },
     {
@@ -127,7 +110,7 @@
        "4451"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +157,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.0009], device='cuda:0')\n",
+      "torch.Size([1, 4451])\n",
+      "tensor([4], device='cuda:0')\n",
       "tensor([0.0009], device='cuda:0')\n",
       "tensor([4], device='cuda:0')\n"
      ]
@@ -193,7 +177,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-d36de7286a35>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0;31m# add new words to sequences\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m         \u001b[0mseqs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mseqs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprev_word_inds\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnext_word_inds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0;31m# which sequences are incomplete - didn't reach <end>\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-f79f76091e05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m         \u001b[0;31m# add new words to sequences\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m         \u001b[0mseqs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mseqs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprev_word_inds\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnext_word_inds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[0;31m# which sequences are incomplete - didn't reach <end>\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mIndexError\u001b[0m: tensors used as indices must be long, byte or bool tensors"
      ]
     }
@@ -223,6 +207,8 @@
     "    \n",
     "    # tensor to store top k previous words at each step; currently it's only <sos>\n",
     "    k_prev_words = torch.LongTensor([[vocab.stoi['<sos>']]]*k).to(device) # [k, 1]\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    # tensor to store top k sequences\n",
     "    seqs = k_prev_words\n",
@@ -254,18 +240,20 @@
     "        # add \n",
     "        scores = top_k_scores.expand_as(scores) + scores # [s, vocab_size]\n",
     "        \n",
+    "        print(scores.shape)\n",
+    "        \n",
     "        # for the first step: all k points will have the same score; since same k previous words, h,c\n",
     "        if step == 1:\n",
-    "            top_k_scores, top_k_words = scores[0].topk(k, 0, True, True)\n",
+    "            top_k_scores, top_k_words = scores[0].topk(k, 0, True, True)  # [s]\n",
     "        else:\n",
-    "            # unroll and find top scores and their unrolled indices\n",
-    "            top_k_scores, top_k_words = scores.view(-1).topk(k, 0, True, True)\n",
+    "            # Unroll and find top scores, and their unrolled indices\n",
+    "            top_k_scores, top_k_words = scores.view(-1).topk(k, 0, True, True)  # [s]\n",
     "            \n",
     "        # convert unrolled indices to actual indices of scores\n",
-    "        print(prev_word_inds)\n",
     "        prev_word_inds = top_k_words / len(vocab)\n",
     "        next_word_inds = top_k_words % len(vocab)\n",
     "        \n",
+    "        print(top_k_words)\n",
     "        print(prev_word_inds)\n",
     "        print(next_word_inds)\n",
     "        \n",
@@ -319,51 +307,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w, ww = scores.view(-1).topk(k, 0, True, True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4451"
+       "(tensor([-0.2484], device='cuda:0', grad_fn=<TopkBackward>),\n",
+       " tensor([4], device='cuda:0'))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(vocab)"
+    "w, ww"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
