--- a/Scores.ipynb
+++ b/Scores.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1d68be61",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "1bf2898d",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "566e5b74",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30000/30000 [00:00<00:00, 377144.91it/s]\n"
+      "100%|██████████| 30000/30000 [00:00<00:00, 406520.66it/s]\n"
      ]
     },
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "ba7f0160",
    "metadata": {},
    "outputs": [
@@ -92,32 +92,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset split: train\n",
-      "Unique images: 6000\n",
-      "Total size: 30000\n",
-      "Dataset split: val\n",
+      "Dataset split: test\n",
       "Unique images: 1000\n",
       "Total size: 5000\n"
      ]
     }
    ],
    "source": [
-    "_, val_loader = get_loaders(256, IMGS_PATH, DATA_PATH, transform, vocab)"
+    "test_loader = get_loaders(256, IMGS_PATH, DATA_PATH, transform, vocab, test=True, n_workers=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "7410884e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cuda'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "57429326",
    "metadata": {},
    "outputs": [],
@@ -129,39 +138,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "136a511e",
-   "metadata": {},
+   "execution_count": 8,
+   "id": "5367ab02",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation: [0/20]\tBatch Time 5.332 (5.332)\tLoss 5.3900 (5.3900)\tTop-5 Accuracy 59.209 (59.209)\t\n",
+      "Validation: [0/20]\tBatch Time 6.399 (6.399)\tLoss 5.4778 (5.4778)\tTop-5 Accuracy 59.628 (59.628)\t\n",
       "----- Bleu-n Scores -----\n",
-      "1: 61.14245531546552\n",
-      "2: 39.04236745164468\n",
-      "3: 24.068127155893208\n",
-      "4: 14.401208199544532\n",
+      "1: 61.84523508869373\n",
+      "2: 39.539032590629255\n",
+      "3: 23.968151536557222\n",
+      "4: 14.211735290320687\n",
       "-------------------------\n",
       "\n",
-      " * LOSS - 5.291, TOP-5 ACCURACY - 60.208, BLEU-4 - 0.1449556204126587\n",
+      " * LOSS - 5.294, TOP-5 ACCURACY - 60.592, BLEU-4 - 0.1426590578737362\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.1449556204126587"
+       "0.1426590578737362"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "validate(val_loader, encoder, decoder, criterion, vocab)"
+    "validate(test_loader, encoder, decoder, criterion, vocab)"
    ]
   }
  ],
