--- a/Scores.ipynb
+++ b/Scores.ipynb
@@ -54,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30000/30000 [00:00<00:00, 406520.66it/s]\n"
+      "100%|██████████| 40000/40000 [00:00<00:00, 410807.55it/s]\n"
      ]
     },
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ba7f0160",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7410884e",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "'cuda'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,6 +167,67 @@
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validate(test_loader, encoder, decoder, criterion, vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "253d2fa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded Checkpoint!!\n",
+      "Last Epoch: 7\n",
+      "Best Bleu-4: 0.14037447507455647\n"
+     ]
+    }
+   ],
+   "source": [
+    "MODEL_PATH = 'models/BEST_checkpoint_flickr8k_5_cap_per_img_2_min_word_freq_resnet101_fullvocab.pth.tar'\n",
+    "checkpoint = load_checkpoint(MODEL_PATH)\n",
+    "encoder = checkpoint['encoder'].to(device)\n",
+    "decoder = checkpoint['decoder'].to(device)\n",
+    "criterion = nn.CrossEntropyLoss().to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ed110424",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation: [0/20]\tBatch Time 7.287 (7.287)\tLoss 5.0482 (5.0482)\tTop-5 Accuracy 59.976 (59.976)\t\n",
+      "----- Bleu-n Scores -----\n",
+      "1: 61.066733101604534\n",
+      "2: 38.931703079679835\n",
+      "3: 23.516410055973473\n",
+      "4: 13.795431208664416\n",
+      "-------------------------\n",
+      "\n",
+      " * LOSS - 5.164, TOP-5 ACCURACY - 58.940, BLEU-4 - 0.13848016097852667\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.13848016097852667"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
