--- a/Train.ipynb
+++ b/Train.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
     "\n",
     "# training parameters\n",
     "epochs = 1  # number of epochs to train for (if early stopping is not triggered)\n",
-    "batch_size = 64\n",
+    "batch_size = 124\n",
     "workers = 4\n",
     "encoder_lr = 1e-4  # learning rate for encoder if fine-tuning\n",
     "decoder_lr = 4e-4  # learning rate for decoder\n",
@@ -104,7 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30000/30000 [00:00<00:00, 389916.33it/s]\n"
+      "100%|██████████| 40000/40000 [00:00<00:00, 386307.43it/s]\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
     {
      "data": {
       "text/plain": [
-       "4451"
+       "5089"
       ]
      },
      "execution_count": 7,
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 10"
+    "epochs = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,24 +172,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data_name': 'flickr8k_5_cap_per_img_2_min_word_freq_resnet101',\n",
+       " 'imgs_path': 'flickr/Images/',\n",
+       " 'df_path': 'data.json',\n",
+       " 'vocab': <dataset.Vocabulary at 0x7fa6cd494dd0>,\n",
+       " 'epochs': 1,\n",
+       " 'batch_size': 124,\n",
+       " 'workers': 4,\n",
+       " 'decoder_lr': 0.0004,\n",
+       " 'encoder_lr': 0.0001,\n",
+       " 'fine_tune_encoder': False}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "checkpoint = 'models/BEST_checkpoint_flickr8k_5_cap_per_img_2_min_word_freq_resnet101.pth.tar'"
+    "t_params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Checkpoint!!\n",
-      "Starting Epoch: 9\n",
       "Loading Data\n",
       "Dataset split: train\n",
       "Unique images: 6000\n",
@@ -201,28 +219,25 @@
       "-------------------- Fitting --------------------\n",
       "__________________________________________________\n",
       "-------------------- Training --------------------\n",
-      "Epoch: [9][0/469]\tBatch Time 3.355 (3.355)\tData Load Time 0.856 (0.856)\tLoss 3.4728 (3.4728)\tTop-5 Accuracy 72.050 (72.050)\n",
-      "Epoch: [9][100/469]\tBatch Time 0.939 (0.935)\tData Load Time 0.000 (0.009)\tLoss 3.5660 (3.4792)\tTop-5 Accuracy 69.565 (71.527)\n",
-      "Epoch: [9][200/469]\tBatch Time 0.981 (0.932)\tData Load Time 0.000 (0.004)\tLoss 3.4281 (3.4880)\tTop-5 Accuracy 71.118 (71.415)\n",
-      "Epoch: [9][300/469]\tBatch Time 0.893 (0.931)\tData Load Time 0.000 (0.003)\tLoss 3.4501 (3.4949)\tTop-5 Accuracy 73.367 (71.396)\n",
-      "Epoch: [9][400/469]\tBatch Time 0.938 (0.930)\tData Load Time 0.000 (0.002)\tLoss 3.6668 (3.4966)\tTop-5 Accuracy 68.730 (71.375)\n",
+      "Epoch: [0][0/242]\tBatch Time 12.364 (12.364)\tData Load Time 8.006 (8.006)\tLoss 9.4866 (9.4866)\tTop-5 Accuracy 0.000 (0.000)\n",
+      "Epoch: [0][100/242]\tBatch Time 1.823 (1.907)\tData Load Time 0.000 (0.080)\tLoss 4.9737 (5.6106)\tTop-5 Accuracy 52.396 (43.264)\n",
+      "Epoch: [0][200/242]\tBatch Time 1.813 (1.851)\tData Load Time 0.000 (0.040)\tLoss 4.7632 (5.2538)\tTop-5 Accuracy 54.283 (48.424)\n",
       "-------------------- Validation --------------------\n",
-      "Validation: [0/79]\tBatch Time 1.618 (1.618)\tLoss 5.3437 (5.3437)\tTop-5 Accuracy 59.022 (59.022)\t\n",
+      "Validation: [0/41]\tBatch Time 7.281 (7.281)\tLoss 5.4750 (5.4750)\tTop-5 Accuracy 51.539 (51.539)\t\n",
+      "----- Bleu-n Scores -----\n",
+      "1: 55.733232557025005\n",
+      "2: 33.00266069909076\n",
+      "3: 17.830606478271484\n",
+      "4: 9.696190714028482\n",
+      "-------------------------\n",
       "\n",
-      " * LOSS - 5.304, TOP-5 ACCURACY - 59.006, BLEU-4 - 0.13730957600297228\n",
+      " * LOSS - 5.657, TOP-5 ACCURACY - 51.163, BLEU-4 - 0.0975971991336903\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "fit(t_params=t_params, checkpoint=checkpoint, m_params=m_params)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a href='BEST_checkpoint_flickr8k_5_cap_per_img_2_min_word_freq_resnet101.pth.tar'>download</a>"
+    "fit(t_params=t_params, m_params=m_params)"
    ]
   }
  ],
